# ai707-sae-interpretability

./: README.md
docs/: dec-7-2025-guideline-to-sae-onboarding-gpt51.md
experiments/exp-sae-lens/: .gitignore  README.md  alignment-faking-feature-analysis.ipynb  analyze_base_llama3_8b_fast.py  demo_feature_dashboards.html  pyproject.toml  sandbox-analysis.ipynb  sandbox-logit-lens.ipynb  sandbox-sae-llama-3-8b-analysis.ipynb  sandbox-sae-llama-3-8b-train.ipynb  sandbox-sae-reuse.ipynb  sandbox-sae-test.ipynb  sandbox.ipynb  train-sae-llama-70b-alignment-faking.ipynb  train_llama3_8b.py  train_sae_background.py  train_sae_qwen_1.5b.py  train_sae_simple.py  tutorial-analysis.ipynb  tutorial-logit-lens.ipynb  tutorial-training-sae.ipynb
