[project]
name = "exp-sae-lens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bitsandbytes>=0.48.2",
    "circuitsvis>=1.43.3",
    "nbformat>=5.10.4",
    "pip>=25.3",
    "sae-dashboard>=0.7.3",
    "sae-lens>=6.22.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
